--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "author": "Huong Nguyen <shovity@gmail.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "database": "redis-server"
+  },
   "dependencies": {
+    "redis": "^2.8.0",
     "request": "^2.83.0"
   }
 }
