--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "database": "redis-server"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.2",
+    "express-graphql": "^0.6.12",
+    "graphql": "^0.13.1",
     "redis": "^2.8.0",
     "request": "^2.83.0"
   }
